Details View laid out, but no constraints or stackviews

--- a/pokedex/Info.plist
+++ b/pokedex/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>pokemonSolid.ttf</string>
+	</array>
 </dict>
 </plist>
