--- a/pokedex/Info.plist
+++ b/pokedex/Info.plist
@@ -47,5 +47,10 @@
 	<array>
 		<string>pokemonSolid.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
